// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkedList linkedList init & add 1`] = `
Array [
  "0:0x00",
  "1:0x00",
  "2:0x00",
  "3:0x00",
  "4:0x00",
  "5:0x00",
  "6:0x00",
  "7:0x00",
  "8:0x30",
  "9:0x00",
  "10:0x00",
  "11:0x00",
  "12:0x00",
  "13:0x00",
  "14:0x00",
  "15:0x00",
  "16:0x00",
  "17:0x00",
  "18:0x00",
  "19:0x00",
  "20:0x00",
  "21:0x00",
  "22:0x00",
  "23:0x00",
  "24:0x48",
  "25:0x00",
  "26:0x00",
  "27:0x00",
  "28:0x60",
  "29:0x00",
  "30:0x00",
  "31:0x00",
  "32:0x00",
  "33:0x02",
  "34:0x00",
  "35:0x00",
  "36:0x08",
  "37:0x00",
  "38:0x00",
  "39:0x00",
  "40:0x03",
  "41:0x00",
  "42:0x00",
  "43:0x00",
  "44:0x18",
  "45:0x00",
  "46:0x00",
  "47:0x00",
  "48:0x18",
  "49:0x00",
  "50:0x00",
  "51:0x00",
  "52:0x00",
  "53:0x00",
  "54:0x00",
  "55:0x00",
  "56:0x48",
  "57:0x00",
  "58:0x00",
  "59:0x00",
  "60:0x00",
  "61:0x00",
  "62:0x00",
  "63:0x00",
  "64:0x58",
  "65:0x00",
  "66:0x00",
  "67:0x00",
  "68:0x58",
  "69:0x00",
  "70:0x00",
  "71:0x00",
  "72:0x18",
  "73:0x00",
  "74:0x00",
  "75:0x00",
  "76:0x30",
  "77:0x00",
  "78:0x00",
  "79:0x00",
  "80:0x00",
  "81:0x00",
  "82:0x00",
  "83:0x00",
  "84:0x00",
  "85:0x00",
  "86:0x00",
  "87:0x00",
  "88:0x00",
  "89:0x00",
  "90:0x00",
  "91:0x00",
  "92:0x00",
  "93:0x00",
  "94:0x00",
  "95:0x00",
]
`;

exports[`LinkedList linkedList init & add 2`] = `
Array [
  "0:0x00",
  "1:0x00",
  "2:0x00",
  "3:0x00",
  "4:0x00",
  "5:0x00",
  "6:0x00",
  "7:0x00",
  "8:0x30",
  "9:0x00",
  "10:0x00",
  "11:0x00",
  "12:0x00",
  "13:0x00",
  "14:0x00",
  "15:0x00",
  "16:0x00",
  "17:0x00",
  "18:0x00",
  "19:0x00",
  "20:0x00",
  "21:0x00",
  "22:0x00",
  "23:0x00",
  "24:0x60",
  "25:0x00",
  "26:0x00",
  "27:0x00",
  "28:0x78",
  "29:0x00",
  "30:0x00",
  "31:0x00",
  "32:0x00",
  "33:0x02",
  "34:0x00",
  "35:0x00",
  "36:0x08",
  "37:0x00",
  "38:0x00",
  "39:0x00",
  "40:0x03",
  "41:0x00",
  "42:0x00",
  "43:0x00",
  "44:0x18",
  "45:0x00",
  "46:0x00",
  "47:0x00",
  "48:0x18",
  "49:0x00",
  "50:0x00",
  "51:0x00",
  "52:0x00",
  "53:0x00",
  "54:0x00",
  "55:0x00",
  "56:0x48",
  "57:0x00",
  "58:0x00",
  "59:0x00",
  "60:0x00",
  "61:0x00",
  "62:0x00",
  "63:0x00",
  "64:0x70",
  "65:0x00",
  "66:0x00",
  "67:0x00",
  "68:0x58",
  "69:0x00",
  "70:0x00",
  "71:0x00",
  "72:0x18",
  "73:0x00",
  "74:0x00",
  "75:0x00",
  "76:0x30",
  "77:0x00",
  "78:0x00",
  "79:0x00",
  "80:0x60",
  "81:0x00",
  "82:0x00",
  "83:0x00",
  "84:0x00",
  "85:0x00",
  "86:0x00",
  "87:0x00",
  "88:0x70",
  "89:0x00",
  "90:0x00",
  "91:0x00",
  "92:0x07",
  "93:0x00",
  "94:0x00",
  "95:0x00",
  "96:0x18",
  "97:0x00",
  "98:0x00",
  "99:0x00",
  "100:0x48",
  "101:0x00",
  "102:0x00",
  "103:0x00",
  "104:0x00",
  "105:0x00",
  "106:0x00",
  "107:0x00",
  "108:0x00",
  "109:0x00",
  "110:0x00",
  "111:0x00",
  "112:0x00",
  "113:0x00",
  "114:0x00",
  "115:0x00",
  "116:0x00",
  "117:0x00",
  "118:0x00",
  "119:0x00",
]
`;
